[package]
name = "excel-reader"
version = "0.1.0"
authors = ["Marc Par <marc.par10@gmail.com>"]
edition = "2018"


[dependencies]
calamine = "0.16.1"

[dependencies.cpython]
version = "0.5.0"
features = ["extension-module"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust2py"
crate-type = ["dylib"]

[[bin]]
name =  "mybin"
path = "src/bin.rs"